--- a/qse-is-core/pom.xml
+++ b/qse-is-core/pom.xml
@@ -40,6 +40,12 @@
     	<artifactId>afw-core</artifactId>
     	<version>1.0</version>
     </dependency>
+    <dependency>
+        <groupId>org.glassfish</groupId>
+        <artifactId>javax.json</artifactId>
+        <version>1.1.4</version>
+        <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
