Adding SCM details to POM.

--- a/qse-is-core/pom.xml
+++ b/qse-is-core/pom.xml
@@ -163,4 +163,9 @@
       </build>
     </profile>
   </profiles>
+  <scm>
+  	<connection>scm:git:https://github.com/jochenw/qse</connection>
+  	<url>https://github.com/jochenw/qse</url>
+  	<developerConnection>scm:git:https://github.com/jochenw/qse</developerConnection>
+  </scm>
 </project>
