--- a/qse-is-core/pom.xml
+++ b/qse-is-core/pom.xml
@@ -44,7 +44,7 @@
     <dependency>
     	<groupId>com.github.jochenw.afw</groupId>
     	<artifactId>afw-core</artifactId>
-    	<version>0.3-SNAPSHOT</version>
+    	<version>0.3</version>
     </dependency>
     <dependency>
         <groupId>org.glassfish</groupId>
@@ -55,6 +55,7 @@
   </dependencies>
 
   <build>
+    <defaultGoal>clean install</defaultGoal>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
