--- a/qse-is-core/pom.xml
+++ b/qse-is-core/pom.xml
@@ -52,6 +52,11 @@
         <version>1.1.4</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>org.apache.geronimo.specs</groupId>
+        <artifactId>geronimo-annotation_1.0_spec</artifactId>
+        <version>1.1.1</version>
+    </dependency>
   </dependencies>
 
   <build>
