--- a/qse-is-ant-tasks/pom.xml
+++ b/qse-is-ant-tasks/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.jochenw.qse.is</groupId>
   <artifactId>qse-is-ant-tasks</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.2</version>
   <name>QSE IS (Ant Tasks)</name>
   <description>An Ant task for running the QSE IS engine for static analysis on IS packages.</description>
   <properties>
@@ -14,7 +14,7 @@
   	<dependency>
   		<groupId>com.github.jochenw.qse</groupId>
   		<artifactId>qse-is-core</artifactId>
-  		<version>0.1-SNAPSHOT</version>
+  		<version>0.2</version>
   	</dependency>
   	<dependency>
   		<groupId>org.apache.ant</groupId>
@@ -60,5 +60,6 @@
         </executions>
       </plugin>
     </plugins>
+    <defaultGoal>clean install</defaultGoal>
   </build>
 </project>
