--- a/qse-is-core/pom.xml
+++ b/qse-is-core/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.jochenw.qse</groupId>
   <artifactId>qse-is-core</artifactId>
-  <version>0.2.1-SNAPSHOT</version>
+  <version>0.2.1</version>
 
   <name>qse-is-core</name>
   <url>https://github.com/jochenw/qse</url>
@@ -264,5 +263,6 @@
   	<connection>scm:git:https://github.com/jochenw/qse</connection>
   	<url>https://github.com/jochenw/qse</url>
   	<developerConnection>scm:git:https://github.com/jochenw/qse</developerConnection>
+    <tag>qse-is-core-0.2.1</tag>
   </scm>
 </project>
