--- a/qse-is-core/pom.xml
+++ b/qse-is-core/pom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.jochenw.qse</groupId>
   <artifactId>qse-is-core</artifactId>
-  <version>0.3-SNAPSHOT</version>
+  <version>0.2.1-SNAPSHOT</version>
 
   <name>qse-is-core</name>
   <url>https://github.com/jochenw/qse</url>
@@ -263,6 +264,5 @@
   	<connection>scm:git:https://github.com/jochenw/qse</connection>
   	<url>https://github.com/jochenw/qse</url>
   	<developerConnection>scm:git:https://github.com/jochenw/qse</developerConnection>
-    <tag>HEAD</tag>
   </scm>
 </project>
