Adding use of property gpg.key.id

--- a/qse-is-core/pom.xml
+++ b/qse-is-core/pom.xml
@@ -179,6 +179,9 @@
                 </goals>
                 <phase>verify</phase>
               </execution>
+              <configuration>
+                <keyname>${gpg.key.id}</keyname>
+              </configuration>
             </executions>
           </plugin>
         </plugins>
