Setting keyname=jochen.wiedmann@gmail.com

--- a/qse-is-core/pom.xml
+++ b/qse-is-core/pom.xml
@@ -179,7 +179,7 @@
                 </goals>
                 <phase>verify</phase>
                 <configuration>
-                  <keyname>${gpg.key.id}</keyname>
+                  <keyname>jochen.wiedmann@gmail.com</keyname>
                 </configuration>
               </execution>
             </executions>
