--- a/qse-is-core/pom.xml
+++ b/qse-is-core/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.github.jochenw.qse</groupId>
   <artifactId>qse-is-core</artifactId>
-  <version>0.2.1</version>
+  <version>0.2.2-SNAPSHOT</version>
 
   <name>qse-is-core</name>
   <description>QSE IS (Core module)</description>
@@ -275,6 +275,6 @@
   	<connection>scm:git:https://github.com/jochenw/qse</connection>
   	<url>https://github.com/jochenw/qse</url>
   	<developerConnection>scm:git:https://github.com/jochenw/qse</developerConnection>
-    <tag>qse-is-core-0.2.1</tag>
+    <tag>HEAD</tag>
   </scm>
 </project>
